2003-04-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libmunge/Makefile.am, src/libmunge/Makefile.in,
	  src/libmunge/strings.c: Added descriptive string arrays for enums.

2003-04-24  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/unmunge.c: Changed "t" & "T" cmdline opts to "k" & "K".

2003-04-23  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c: Ensured MUNGE_TTL_FOREVER never expires.

	* libcommon/munge_defs.h: Reduced credential's salt from 64b to 56b.

	* src/libmunge/decode.c, src/libmunge/encode.c, src/munged/dec_v1.c,
	  src/munged/enc_v1.c: Removed credential's TTL field.

	* : Cleanup of error propagation code.

2003-04-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.h, src/munged/dec_v1.c, src/munged/enc_v1.c:
	  Changed cred's realm_len from uint32_t to uint8_t.

2003-04-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/munged/conf.c:
	  Temporarily added MUNGED_RANDOM_SEED and MUNGED_SECRET_KEY defs.

	* src/libmunge/ctx.c, src/libmunge/munge.h, src/munge/munge.c:
	  Renamed munge_ctx_err() to munge_ctx_strerror().

	* : Committed munge_decode() support.

	* src/munged/md.c: Changed md_size() to return 0 on NULL ptr.
	* src/munged/mac.c: Changed mac_size() to return 0 on NULL ptr.
	* src/munged/cipher.c: Changed cipher_block_size(), cipher_iv_size(),
	  and cipher_key_size() to return 0 on NULL ptr.

	* src/munged/cipher.h: Added CIPHER_DECRYPT & CIPHER_ENCRYPT enums.

	* src/libcommon/str.c, src/libcommon/str.h: Added strdump().

	* src/libcommon/munge_defs.h:
	  Changed MUNGE_CRED_PREFIX & MUNGE_CRED_SUFFIX.

2003-04-08  Chris Dunlap  <cdunlap@llnl.gov>

	* : Committed munge_encode() support.

2003-02-18  Chris Dunlap  <cdunlap@llnl.gov>

	* : Changed #ifdef/#ifndef to #if where appropriate.

2003-02-16  Chris Dunlap  <cdunlap@llnl.gov>

	* : Added GPL_LICENSED preprocessor macro support.

2003-02-13  Chris Dunlap  <cdunlap@llnl.gov>

	* : Added munge/unmunge cmdline progs.
